Implements API abstraction layer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,11 @@
     }
   },
   "cSpell.words": [
-    "kubernetes"
+    "backoff",
+    "fastapi",
+    "incluster",
+    "kube",
+    "kubernetes",
+    "pydantic"
   ],
 }
